@@ -194,6 +194,9 @@ PIG-1696: Performance: Use System.arraycopy() instead of manually copying the by
 
 BUG FIXES
 
+PIG-1990: support casting of complex types with empty inner schema
+ to complex type with non-empty inner schema (thejas)
+
 PIG-2016: -dot option does not work with explain and new logical plan (daijy)
 
 PIG-2018: NPE for co-group with group-by column having complex schema and 
